--- a/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-posts-list.scss
+++ b/themes/dm-theme-01/scss/templates-design/templates-design-parts/section-posts-list.scss
@@ -238,11 +238,11 @@
         }
         &.preview-image {
           > .dm-post-item-image {
-            > .logo, svg {
+            > .logo, svg, > .thumbnail + .preview-image {
               opacity: 0 !important;
               transition: all 0.6s ease-in-out;
             }
-            > .preview-image {
+            > .preview-image, > .thumbnail {
               opacity: 0.7 !important;
               mask: linear-gradient(0deg, transparent, white 50%, white 100%, transparent);
               transition: all 0.6s ease-in-out;
@@ -250,7 +250,7 @@
           }
           &:hover {
             > .dm-post-item-image {
-              > .preview-image {
+              > .preview-image, > .thumbnail {
                 opacity: 1 !important;
                 transition: all 0.6s ease-in-out;
               }
